fix(app): Fixed z-index of Up component

--- a/components/Up/Up.module.css
+++ b/components/Up/Up.module.css
@@ -9,6 +9,7 @@
 	background: var(--primary-light);
 	border-radius: 4px;
 	border: 1px solid var(--secondary);
+	z-index: 10000;
 }
 
 .up.active {
